--- a/notes/2/2022-20-01.md
+++ b/notes/2/2022-20-01.md
@@ -251,8 +251,21 @@ Java 5.0 includes the concurrent collections package, `java.util.concurrent`
 - Useful in multithreaded code when reads frequent and updates rare
 
 
+## Class Notes
 
+Increased response time/latency -> decreased throughput
 
+Forward proxy: modifies outbound packets
+
+Reverse proxy: modifies inbound packets
+
+Distributed systems should be stateless: they should not store any state about the incoming requests
+
+Two main types of distributed databases:
+1) Distributed SQL stores
+2) Distributed NoSQL stores
+
+Response time = RTT
 
 
 
