--- a/notes/3/2022-27-01.md
+++ b/notes/3/2022-27-01.md
@@ -1,5 +1,88 @@
 # Architecture Basics
 
+## Scaling the Service Layer
+
+Basic Multi-Tier Distributed Systems Architecture:
+- Mobile/Web user -> Internet -> Application Server -> Database
+
+Application Server:
+- Container (execution) environment for application services (APIs)
+- Accepts client requests and invokes appropriate service functionality
+- Multithreaded execution environment using a thread pool
+- Connections to database managed through a connection pool
+
+<b>Scaling Up</b>: Improve hardware to increase capacity
+- There is a limit to how much a single server can scale up
+
+<b>Scaling Out:</b>: Replicating a service an running multiple copies on multiple server nodes
+- Cheap, commodity hardware
+- Requests are distributed across the replicas
+- Given N replicas, each node processes num_requests/N
+- Mobile/Web user -> Internet -> Load Balancer -> Application Servers -> Session store/Database
+
+State Management - Stateless
+- User state information is stored externally in a Session Store rather than on particular service instances
+
+<b>Scale Out Advantages</b>:
+- Cheap
+- Highly Available
+	- Service instances manage no state so the system is resiliant to failures
+
+## Scaling the Data Tier
+
+Scaling out increases capacity but will eventually overload the database (i.e. database bottlencek)
+- Slow queries -> longer response times
+- Can lead to system component failure due to resource exhaustion
+
+<b>Scaling Up for Database</b>: Increasing hardware capacity of a db instance
+
+### Caching
+
+<b>Caching the db</b>: Employing distributed caching in the service dier
+- Caches store commonly accessed database results in memory
+- Can be quickly retrieved without database access
+- Distributed caches such as **Redis** or **memcached** widely used
+- Essentially distributed Key-Value stores with very simple APIs
+
+Caching works well for mostly read data
+
+### Distributed Databases
+
+Two main flavors:
+1) **Distributed SQL stores**:
+	- Store data across multiple disks that are queried by multiple database engine replicas
+	- Multiple engines logically appear to the application as a single database, hence minimizing code changes
+2) **Distributed "NoSQL" Stores**:
+	- Variety of data models and query languages
+	- Distribute data across multiple nodes running the database engine, each with their own locally attached storage
+	- e.g. **Cassandra**, **MongoDB**, **Neo4j**
+
+## Multiple Processing Tiers
+
+Any scalable system has many services that interact to process a request
+
+Stateless, cached, load-balanced services allow us to build a multi-tiered application
+
+To fulfill a request, a service calls one or more downstream services
+
+Multiple services can have their own caches but access the same service to access a database
+
+<b>Advantages</b>
+- Easier to build, test, modify
+- Can be scaled individually based on the service demand
+
+### Responsiveness
+
+Request Latency = time interval between when client sent request and received the response
+
+Responsiveness can be increased with queueing for later writes to database
+
+Writes to a queue can be utilized when results of write are not immediately needed
+- Queuing echnologies provide asynchronous communications based on the producer consumer pattern
+- Data is eventually persisted
+- Use cases should be resilient to longer delays
+
+
 
 
 
