Week 6 class notes

--- a/notes/6/2023-02-17.md
+++ b/notes/6/2023-02-17.md
@@ -97,6 +97,9 @@ RabbitMQ supports: Mirrored queues (to be deprecated) and quorum queues
 
 # Class Notes
 
+<b>Catalog of ~65 messaging patterns</b>:https://www.enterpriseintegrationpatterns.com/patterns/messaging/
+
+
 
 
 
